# selmate.py

./: .gitignore  LICENSE  README.md  pyproject.toml
selmate/: __init__.py  composites.py  constants.py  js_primitives.py  safe_exceptions.py  selenium_primitives.py  utils.py
selmate/humanity/: constants.py  latency.py
